# Introduction

ch02/insertion/: insertion.ml
ch02/merge/: merge.ml
ch04/Mutiplying_square_matrices/: squarmatrix.ml
ch06/heapsort/: dune-project
ch06/heapsort/lib/: dune
ch06/heapsort/test/: dune
ch07/quick/: quick.ml
ch07/quickRandom/: dune  quick.ml
ch08/bucketSort/: bucketSort.ml  dune
ch08/countingSort/: countingSort.ml  dune
ch09/SeletionInWorst/: dune  selection.ml
ch09/randomSelect/: dune  randomselect.ml
ch10/elementaryDataStructures/: elementaryDataStructures.ml
ch11/: directAddressTable.ml  hashtables.ml
ch11/linearProbing/: dune  linearProbing.ml  test.ml
ch11/openAddrHashTable/: dune  openhashtbl.mli  test.ml
ch12/: bst.ml  bst.mli  dune  test.ml
ch13/: dune  redBlackTree.ml  redBlackTree.mli  redblacktree.ml  test.ml
ch14/cutRod/: cutRod1.ml  dune
ch14/longestCommonSubsequence/: dune  lcs.ml
ch14/matrixChainMultiplication/: dune  matrixChain.ml
ch14/optimalBst/: dune  optimalBst.ml
ch15/: actSelector.ml
ch15/huffman/: dune  dune-project  huffman.ml  readword.ml  readword.mli  readword.opam  step.txt  test.ml  wordlist.ml
ch16/: graph.ml  graph.txt
ch20/: deepseek.txt  dune  graph.ml  graph.txt  londonUnderground.txt  shanghai.txt  silkroad.txt
